fix the alignment bug in ticket history for opera and ie7
other browsers( including chrome, firefox and ie8+ ) don't have this problem.

setting min-height to 2em is because the span.type in it has height 1.25em and
padding-top 0.75em. this change won't hurt anyway.

see also #18454

--- a/share/html/NoAuth/css/aileron/ticket.css
+++ b/share/html/NoAuth/css/aileron/ticket.css
@@ -49,6 +49,7 @@ div#ticket-history div.ticket-transaction {
  border-top: 1px solid #ccc;
  padding-bottom: 0.25em;
     position: relative; /* gives us a container for position: absolute */
+ min-height: 2em;
 }
 
 div#ticket-history div.odd {
